Update BookRepository.java